# fep_hook

./: .pre-commit-config.yaml  .pre-commit-hooks.yaml  setup.cfg
pre_commit_hooks/: check_line_length.py  detect_deprecated_symbols.py  line_length_checker.py  util.py
test/: test_check_line_length.py  test_detect_deprecated_symbols.py  test_line_length.py  test_util.py
