[metadata]
name = fortran_pre_commit_hooks
long_description_content_type = text/markdown
version = 0.1
description = Some out-of-the-box hooks for pre-commit.
long_description = file: README.md
url = https://github.com/dmentock/fep_hook
author = Test
author_email = test@test.test

[options]
packages = find:
python_requires = >=3.7

[options.packages.find]
exclude =
    test*

[options.entry_points]
console_scripts =
    check-line-length = pre_commit_hooks.line_length_checker:main
    detect-deprecated-symbols = pre_commit_hooks.detect_deprecated_symbols:main